<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/account_group">
        <item
            android:id="@+id/sliding_menu_messages"
            android:icon="@drawable/logo_transparent"
            android:title="@string/room_sliding_menu_messages"/>

        <item
            android:id="@+id/sliding_menu_settings"
            android:icon="@drawable/icons_settings"
            android:title="@string/room_sliding_menu_settings"/>

        <item
            android:id="@+id/sliding_menu_send_bug_report"
            android:icon="@drawable/ic_material_bug_report"
            android:title="@string/send_bug_report"/>

        <item
            android:id="@+id/sliding_menu_exit"
            android:icon="@drawable/ic_power_settings"
            android:title="@string/action_exit"/>

        <item
            android:id="@+id/sliding_menu_sign_out"
            android:icon="@drawable/ic_material_exit_to_app"
            android:title="@string/action_sign_out"/>
    </group>

    <group android:id="@+id/app_group">
        <item
            android:id="@+id/sliding_menu_version"
            android:title="@string/room_sliding_menu_version"/>
    </group>
</menu>
